--- a/sale_order_requirement/views/order_requirement_line.xml
+++ b/sale_order_requirement/views/order_requirement_line.xml
@@ -126,7 +126,7 @@
                                         <field name="product_id" readonly="1"/>
                                         <field name="product_qty" readonly="1"/>
                                         <field name="product_uom" readonly="1"/>
-                                        <!--<field name="mrp_routing_id"/>-->
+                                        <field name="mrp_routing_id"/>
                                         <!--<field name="stock_availability"/>-->
                                         <!--<field name="spare"/>-->
                                         <field name="is_out_of_stock" invisible="1"/>
