--- a/product_extended/views/product_view.xml
+++ b/product_extended/views/product_view.xml
@@ -8,7 +8,8 @@
             <field name="type">search</field>
             <field name="inherit_id" ref="product.product_search_form_view"/>
             <field name="arch" type="xml">
-                <field name="categ_id" position="after" >
+                <field name="categ_id" position="replace" >
+                    <field name="categ_id" operator="child_of" groups="base.group_extended"/>
                     <field name="supplier_id" domain="[('supplier', '=', True)]" context="{'partner_name': self}"/>
                     <field name="supplier_code" />
                 </field>
