--- a/sale_order_requirement/views/order_requirement_line.xml
+++ b/sale_order_requirement/views/order_requirement_line.xml
@@ -25,7 +25,8 @@
                     <field name="id" invisible="1"/>
                     <group colspan="8" col="8" attrs="{'invisible': [('state','!=','draft')]}">
                         <button name="save_suppliers" string="Save" icon="gtk-save" type="object"/>
-                        <button name="confirm_suppliers" string="OK" icon="gtk-apply" type="object"/>
+                        <button name="confirm_suppliers" string="OK" icon="gtk-apply" type="object"
+                                confirm="Are you sure you want to do this?"/>
                     </group>
                     <group colspan="8" col="8" attrs="{'invisible': ['|',('temp_mrp_bom_ids','=',False),
                                                                          ('is_manufactured','=',False)]}">
