--- a/sale_order_requirement/views/order_requirement_line.xml
+++ b/sale_order_requirement/views/order_requirement_line.xml
@@ -18,6 +18,7 @@
                     <field name="original_cost"/>
                     <field name="cost"/>
                     <field name="is_manufactured" on_change="onchange_is_manufactured(is_manufactured,new_product_id)"/>
+                    <field name="buy" attrs="{'readonly': ['|', ('is_manufactured','=',True)]}"/>
                     <field name="supplier_id" attrs="{'invisible': [('is_manufactured', '=', True)],
                                 'required': [('is_manufactured', '=', False)],
                                 'readonly': [('state','!=','draft')]}"/>
@@ -64,6 +65,8 @@
                                         <field name="is_manufactured"
                                             attrs="{'readonly': ['|',('level','=',0),
                                                                      ('is_leaf','=',True)]}"/>
+                                        <field name="buy" attrs="{'readonly': ['|',('level','=',0),
+                                                                                   ('is_manufactured','=',True)]}"/>
                                         <field name="supplier_id"
                                                attrs="{'required': [('is_manufactured', '=', False)],
                                                     'readonly': ['|',('is_manufactured', '=', True),
@@ -137,6 +140,7 @@
                                                 attrs="{'invisible': [('is_out_of_stock','=',False)]}"/>
                                         <field name="cost"/>
                                         <field name="is_manufactured" readonly="1"/>
+                                        <field name="buy" readonly="1"/>
                                         <field name="supplier_id"  readonly="1"/>
                                         <field name="purchase_order_id" />
                                         <field name="mrp_production_id" />
