--- a/sale_order_requirement/views/sale_view.xml
+++ b/sale_order_requirement/views/sale_view.xml
@@ -8,20 +8,11 @@
             <field name="type">form</field>
 
             <field name="arch" type="xml">
-                <xpath expr="//field[@name='order_line' or @name='abstract_line_ids']/form//field[@name='name']"
-                        position="after">
-                        <button name="action_open_order_requirement(order_requirement_line_id)" string="Order Requirement"
-                                icon="gtk-properties" type="object"/>
-                </xpath>
+                <field name="product_id" position="after">
+                    <button name="action_open_order_requirement(order_requirement_line_id)" string="Order Requirement"
+                            icon="gtk-properties" type="object"/>
+                </field>
             </field>
-
-            <!--<field name="arch" type="xml">-->
-                <!--<field name="product_id" position="after">-->
-                    <!--&lt;!&ndash;<field name="order_requirement_line_id" invisible="1"/>&ndash;&gt;-->
-                    <!--<button name="action_open_order_requirement(order_requirement_line_id)" string="Order Requirement"-->
-                            <!--icon="gtk-properties" type="object"/>-->
-                <!--</field>-->
-            <!--</field>-->
 
         </record>
 
