--- a/sale_order_requirement/views/purchase_view.xml
+++ b/sale_order_requirement/views/purchase_view.xml
@@ -12,7 +12,13 @@
                     <notebook colspan="4" position="inside">
                         <page string="Sale Order Lines" groups="base.group_extended">
                             <separator colspan="4" string="Sale Orders"/>
-                            <field colspan="4" name="sale_order_ids" nolabel="1" widget="one2many"/>
+                            <field colspan="4" name="temp_mrp_bom_ids" nolabel="1">
+                                <tree string="Sale Order lines">
+                                    <field name="sale_order_id" />
+                                    <field name="product_qty"/>
+                                    <field name="product_uom"/>
+                                </tree>
+                            </field>
                         </page>
                     </notebook>
                 </form>
@@ -26,7 +32,7 @@
             <field name="type">search</field>
             <field name="arch" type="xml">
                 <field name="product_id" position="after">
-                    <field name="sale_order_ids" string="Sale Order" >
+                    <field name="temp_mrp_bom_ids" string="Sale Order" >
                         <filter icon="terp-sale"
                                 groups="base.group_extended"
                                 help="Sales Orders"/>
