--- a/sale_order_requirement/views/purchase_view.xml
+++ b/sale_order_requirement/views/purchase_view.xml
@@ -32,7 +32,7 @@
             <field name="type">search</field>
             <field name="arch" type="xml">
                 <field name="product_id" position="after">
-                    <field name="temp_mrp_bom_ids" string="Sale Order" >
+                    <field name="sale_order_ids" string="Sale Order" >
                         <filter icon="terp-sale"
                                 groups="base.group_extended"
                                 help="Sales Orders"/>
