--- a/mrp_bom_history/views/bom_view.xml
+++ b/mrp_bom_history/views/bom_view.xml
@@ -11,16 +11,21 @@
             <field name="inherit_id" ref="mrp.mrp_bom_form_view" />
             <field name="arch" type="xml">
                 <page string="Components" position="after">
-                    <page string="History">
-                        <field name="deleted_bom_line_ids" nolabel="1">
-                            <tree>
-                                <field name="product_id" />
-                                <field name="product_qty"/>
-                                <field name="product_uom"/>
-                                <field name="date_start"/>
-                                <field name="date_stop"/>
+                    <page string="Communication &amp; History">
+                        <field name="message_ids" colspan="4" nolabel="1" mode="tree" readonly="1">
+                            <tree string="History">
+                                <field name="display_text" string="History Information"/>
+                                <field name="email_from" invisible="1"/>
+                                <button
+                                        string="Reply" attrs="{'invisible': [('email_from', '=', False)]}"
+                                        name="%(mail.action_email_compose_message_wizard)d"
+                                        context="{'mail.compose.message.mode':'reply', 'message_id':active_id}"
+                                        icon="terp-mail-replied" type="action"/>
                             </tree>
                         </field>
+                        <button string="Send New Email"
+                                name="%(mail.action_email_compose_message_wizard)d"
+                                icon="terp-mail-message-new" type="action"/>
                     </page>
                 </page>
             </field>
