--- a/mrp_bom_history/views/bom_view.xml
+++ b/mrp_bom_history/views/bom_view.xml
@@ -23,6 +23,10 @@
                                         icon="terp-mail-replied" type="action"/>
                             </tree>
                         </field>
+                        <button string="Add Internal Note"
+                           name="%(mrp_bom_history.action_bom_add_note)d"
+                           context="{'model': 'mrp.bom' }"
+                           icon="terp-document-new" type="action" />
                         <button string="Send New Email"
                                 name="%(mail.action_email_compose_message_wizard)d"
                                 icon="terp-mail-message-new" type="action"/>
