on order approve show sum of product

--- a/sale_order_confirm/wizard/confirmation_view.xml
+++ b/sale_order_confirm/wizard/confirmation_view.xml
@@ -53,7 +53,7 @@
                             <field name="discount" on_change="onchange_discount(quantity, discount, price_unit)"/>
                             <field name="price_unit" on_change="onchange_price(quantity, discount, price_unit)" />
                             <field name="changed" invisible="1"/>
-                            <field name="price_subtotal"/>
+                            <field name="price_subtotal" sum="SUM"/>
                             <field name="tax_id" invisible="1"/>
                         </tree>
                     </field>
