--- a/task_time_control/views/project_task.xml
+++ b/task_time_control/views/project_task.xml
@@ -200,6 +200,13 @@
                   parent="project.menu_project_management"
                   action="action_view_project_task_work_list"
         />
+
+        <record id="open_project_task_work" model="ir.actions.act_window.view">
+            <field eval="5" name="sequence"/>
+            <field name="view_mode">tree</field>
+            <field name="view_id" ref="project_task_work"/>
+            <field name="act_window_id" ref="action_view_project_task_work_list"/>
+        </record>
         
     </data>
 </openerp>
