--- a/sale_order_requirement/views/mrp_view.xml
+++ b/sale_order_requirement/views/mrp_view.xml
@@ -28,7 +28,7 @@
         </record>
 
         <record id="mrp_bom_tree_view_inherit" model="ir.ui.view">
-            <field name="name">mrp.bom.tree.inherit</field>
+            <field name="name">mrp.bom.product_type.inherit</field>
             <field name="inherit_id" ref="mrp.mrp_bom_tree_view" />
             <field name="model">mrp.bom</field>
             <field name="type">tree</field>
@@ -36,6 +36,18 @@
                 <field name="name" position="replace">
                     <field name="product_type"/>
                 </field>
+            </field>
+        </record>
+
+        <record id="mrp_bom_form_view_inherit" model="ir.ui.view">
+            <field name="name">mrp.bom.product_type.inherit</field>
+            <field name="model">mrp.bom</field>
+            <field name="type">form</field>
+            <field name="inherit_id" ref="mrp.mrp_bom_form_view"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='bom_lines']//tree//field[@name='product_id']" position="before">
+                    <field name="product_type" readonly="1"/>
+                </xpath>
             </field>
         </record>
 
