--- a/mrp_bom_standard_price/views/mrp_bom_view.xml
+++ b/mrp_bom_standard_price/views/mrp_bom_view.xml
@@ -34,5 +34,17 @@
                 </field>
             </field>
         </record>
+
+        <record id="mrp_bom_tree_view_inherit" model="ir.ui.view">
+            <field name="name">mrp.bom.product_type.inherit</field>
+            <field name="inherit_id" ref="mrp.mrp_bom_tree_view" />
+            <field name="model">mrp.bom</field>
+            <field name="type">tree</field>
+            <field name="arch" type="xml">
+                <field name="product_uom" position="replace">
+                    <field name="bom_cost_price" groups="product_bom.group_cost_price" sum="SUM"/>
+                </field>
+            </field>
+        </record>
     </data>
 </openerp>
