--- a/mrp_bom_history/views/bom_view.xml
+++ b/mrp_bom_history/views/bom_view.xml
@@ -6,32 +6,13 @@
         -->
         <record id="mrp_bom_form_view_history" model="ir.ui.view">
             <field name="name">View BoM History on BoM</field>
-            <field name="model">mrp.bom</field>
+            <field name="model">mrp.bom.revision</field>
             <field name="type">form</field>
-            <field name="inherit_id" ref="mrp.mrp_bom_form_view" />
+            <field name="inherit_id" ref="mrp.mrp_bom_revision_tree" />
             <field name="arch" type="xml">
-                <page string="Components" position="after">
-                    <page string="Communication &amp; History">
-                        <field name="message_ids" colspan="4" nolabel="1" mode="tree" readonly="1">
-                            <tree string="History">
-                                <field name="display_text" string="History Information"/>
-                                <field name="email_from" invisible="1"/>
-                                <button
-                                        string="Reply" attrs="{'invisible': [('email_from', '=', False)]}"
-                                        name="%(mail.action_email_compose_message_wizard)d"
-                                        context="{'mail.compose.message.mode':'reply', 'message_id':active_id}"
-                                        icon="terp-mail-replied" type="action"/>
-                            </tree>
-                        </field>
-                        <button string="Add Internal Note"
-                           name="%(mrp_bom_history.action_bom_add_note)d"
-                           context="{'model': 'mrp.bom' }"
-                           icon="terp-document-new" type="action" />
-                        <button string="Send New Email"
-                                name="%(mail.action_email_compose_message_wizard)d"
-                                icon="terp-mail-message-new" type="action"/>
-                    </page>
-                </page>
+                <field name="name" position="after">
+                    <field name="description" />
+                </field>
             </field>
         </record>
 
