missing file commit

--- a/sale_order_requirement/views/order_requirement.xml
+++ b/sale_order_requirement/views/order_requirement.xml
@@ -38,6 +38,7 @@
                     <field name="month" />
                     <newline />
                     <field name="note"/>
+                    <field name="internal_note"/>
                     <group col="1" colspan="4">
                         <field name="order_requirement_line_ids" nolabel="1"/>
                     </group>
