--- a/sale_order_requirement/views/stock_picking.xml
+++ b/sale_order_requirement/views/stock_picking.xml
@@ -1,18 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <openerp>
     <data>
+
         <record id="search_picking_from_customer_order" model="ir.ui.view">
             <field name="name">stock.picking.search.sale.order</field>
             <field name="inherit_id" ref="stock.view_picking_in_search"/>
             <field name="model">stock.picking</field>
             <field name="type">search</field>
-
             <field name="arch" type="xml">
                 <field name="origin" position="after">
                     <field name="sale_order_ids"/>
                 </field>
             </field>
+        </record>
 
+        <record id="view_stock_picking_form" model="ir.ui.view">
+            <field name="name">stock.picking.order.board.form.inherit</field>
+            <field name="model">stock.picking</field>
+            <field name="inherit_id" ref="stock_picking_extended.view_stock_picking_form"/>
+            <field name="type">form</field>
+            <field name="arch" type="xml">
+                <xpath expr="//page[@string='Moves']/field[@name='move_lines']/tree/field[@name='product_id']" position="before">
+                    <button name="action_view_bom" string="Open BOM" type="object" icon="gtk-zoom-in" />
+                    <button name="print_production_order" string="Print" type="object" help="Print All production Order" icon="gtk-print"  />
+                </xpath>
+                <!--<xpath expr="//page[@string='Moves']/field[@name='move_lines']/tree/field[@name='state']" position="after">-->
+
+                <!--</xpath>-->
+            </field>
         </record>
 
     </data>
