--- a/sale_order_requirement/views/sale_workflow.xml
+++ b/sale_order_requirement/views/sale_workflow.xml
@@ -5,9 +5,7 @@
         <record id="sale.trans_ship_ship_end" model="workflow.transition">
             <field name="act_from" ref="sale.act_ship"/>
             <field name="act_to" ref="sale.act_ship_end"/>
-            <field name="trigger_model">procurement.order</field>
-            <field name="trigger_expr_id">procurement_lines_get()</field>
-            <field name="condition">False</field>
+            <field name="signal">close_sale_order</field>
         </record>
 
     </data>
