--- a/purchase_order_extended/view/purchase_order_view.xml
+++ b/purchase_order_extended/view/purchase_order_view.xml
@@ -11,6 +11,9 @@
                 <xpath expr="//field[@name='order_line']/tree//field[@name='date_planned']" position="before">
                     <field name="sequence"/>
                 </xpath>
+                <field name="fiscal_position" position="attributes">
+                    <attribute name="on_change">onchange_fiscal_position(fiscal_position, order_line, context)</attribute>
+                </field>
             </field>
         </record>
 
